runFormatTest(import.meta, ['slang'], { singleQuote: true });
runFormatTest(import.meta, ['slang'], { singleQuote: false });
