// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Quotes.sol - {"singleQuote":false} format 1`] = `
====================================options=====================================
parsers: ["slang"]
singleQuote: false
                                                      printWidth: 80 (default) |
=====================================input======================================
import 'someContract.sol';
import "someOtherContract.sol";

contract Foo {
  string foo1 = 'foo';
  string foo2 = "foo";
  string spaces1 = 'the quick brown fox';
  string spaces2 = "the quick brown fox";
  string singleQuote = "don't do that";
  string escapedSingleQuote = 'don\\'t do that';
  string doubleQuote = 'Use " for quoting';
  string escapedDoubleQuote = "Use \\" for quoting";
  string singleQuotes = "don't do that, don't";
  string escapedSingleQuotes = 'don\\'t do that, don\\'t';
  string doubleQuotes = 'The "quick" brown fox';
  string escapeDoubleQuotes = "The \\"quick\\" brown fox";
  bytes8 hex1 = hex'DeadBeef';
  bytes8 hex2 = hex"DeadBeef";
  string withUnicode1 = unicode'hello 🦄 world';
  string withUnicode2 = unicode"hello 🦄 world";
  string multiPartAndUnicode = unicode'hello 🦄' unicode' world 🦄';
}

=====================================output=====================================
import "someContract.sol";
import "someOtherContract.sol";

contract Foo {
    string foo1 = "foo";
    string foo2 = "foo";
    string spaces1 = "the quick brown fox";
    string spaces2 = "the quick brown fox";
    string singleQuote = "don't do that";
    string escapedSingleQuote = "don't do that";
    string doubleQuote = 'Use " for quoting';
    string escapedDoubleQuote = 'Use " for quoting';
    string singleQuotes = "don't do that, don't";
    string escapedSingleQuotes = "don't do that, don't";
    string doubleQuotes = 'The "quick" brown fox';
    string escapeDoubleQuotes = 'The "quick" brown fox';
    bytes8 hex1 = hex"DeadBeef";
    bytes8 hex2 = hex"DeadBeef";
    string withUnicode1 = unicode"hello 🦄 world";
    string withUnicode2 = unicode"hello 🦄 world";
    string multiPartAndUnicode =
        unicode"hello 🦄"
        unicode" world 🦄";
}

================================================================================
`;

exports[`Quotes.sol - {"singleQuote":false} locations 1`] = `
SourceUnit 0-831
  SourceUnitMembers 0-831
    ImportDirective 0-26
      PathImport 7-25
        StringLiteral 7-25
    ImportDirective 27-58
      PathImport 34-57
        StringLiteral 34-57
    ContractDefinition 60-830
      Identifier 69-72
      ContractSpecifiers 72-72
      ContractMembers 75-829
        StateVariableDefinition 77-97
          StringKeyword 77-83
          StateVariableAttributes 83-83
          Identifier 84-88
          StateVariableDefinitionValue 89-96
            StringLiterals 90-96
              StringLiteral 91-96
        StateVariableDefinition 100-120
          StringKeyword 100-106
          StateVariableAttributes 106-106
          Identifier 107-111
          StateVariableDefinitionValue 112-119
            StringLiterals 113-119
              StringLiteral 114-119
        StateVariableDefinition 123-162
          StringKeyword 123-129
          StateVariableAttributes 129-129
          Identifier 130-137
          StateVariableDefinitionValue 138-161
            StringLiterals 139-161
              StringLiteral 140-161
        StateVariableDefinition 165-204
          StringKeyword 165-171
          StateVariableAttributes 171-171
          Identifier 172-179
          StateVariableDefinitionValue 180-203
            StringLiterals 181-203
              StringLiteral 182-203
        StateVariableDefinition 207-244
          StringKeyword 207-213
          StateVariableAttributes 213-213
          Identifier 214-225
          StateVariableDefinitionValue 226-243
            StringLiterals 227-243
              StringLiteral 228-243
        StateVariableDefinition 247-292
          StringKeyword 247-253
          StateVariableAttributes 253-253
          Identifier 254-272
          StateVariableDefinitionValue 273-291
            StringLiterals 274-291
              StringLiteral 275-291
        StateVariableDefinition 295-336
          StringKeyword 295-301
          StateVariableAttributes 301-301
          Identifier 302-313
          StateVariableDefinitionValue 314-335
            StringLiterals 315-335
              StringLiteral 316-335
        StateVariableDefinition 339-388
          StringKeyword 339-345
          StateVariableAttributes 345-345
          Identifier 346-364
          StateVariableDefinitionValue 365-387
            StringLiterals 366-387
              StringLiteral 367-387
        StateVariableDefinition 391-436
          StringKeyword 391-397
          StateVariableAttributes 397-397
          Identifier 398-410
          StateVariableDefinitionValue 411-435
            StringLiterals 412-435
              StringLiteral 413-435
        StateVariableDefinition 439-493
          StringKeyword 439-445
          StateVariableAttributes 445-445
          Identifier 446-465
          StateVariableDefinitionValue 466-492
            StringLiterals 467-492
              StringLiteral 468-492
        StateVariableDefinition 496-542
          StringKeyword 496-502
          StateVariableAttributes 502-502
          Identifier 503-515
          StateVariableDefinitionValue 516-541
            StringLiterals 517-541
              StringLiteral 518-541
        StateVariableDefinition 545-599
          StringKeyword 545-551
          StateVariableAttributes 551-551
          Identifier 552-570
          StateVariableDefinitionValue 571-598
            StringLiterals 572-598
              StringLiteral 573-598
        StateVariableDefinition 602-630
          BytesKeyword 602-608
          StateVariableAttributes 608-608
          Identifier 609-613
          StateVariableDefinitionValue 614-629
            HexStringLiterals 615-629
              HexStringLiteral 616-629
        StateVariableDefinition 633-661
          BytesKeyword 633-639
          StateVariableAttributes 639-639
          Identifier 640-644
          StateVariableDefinitionValue 645-660
            HexStringLiterals 646-660
              HexStringLiteral 647-660
        StateVariableDefinition 664-710
          StringKeyword 664-670
          StateVariableAttributes 670-670
          Identifier 671-683
          StateVariableDefinitionValue 684-709
            UnicodeStringLiterals 685-709
              UnicodeStringLiteral 686-709
        StateVariableDefinition 713-759
          StringKeyword 713-719
          StateVariableAttributes 719-719
          Identifier 720-732
          StateVariableDefinitionValue 733-758
            UnicodeStringLiterals 734-758
              UnicodeStringLiteral 735-758
        StateVariableDefinition 762-828
          StringKeyword 762-768
          StateVariableAttributes 768-768
          Identifier 769-788
          StateVariableDefinitionValue 789-827
            UnicodeStringLiterals 790-827
              UnicodeStringLiteral 791-808
              UnicodeStringLiteral 809-827
`;

exports[`Quotes.sol - {"singleQuote":true} format 1`] = `
====================================options=====================================
parsers: ["slang"]
singleQuote: true
                                                      printWidth: 80 (default) |
=====================================input======================================
import 'someContract.sol';
import "someOtherContract.sol";

contract Foo {
  string foo1 = 'foo';
  string foo2 = "foo";
  string spaces1 = 'the quick brown fox';
  string spaces2 = "the quick brown fox";
  string singleQuote = "don't do that";
  string escapedSingleQuote = 'don\\'t do that';
  string doubleQuote = 'Use " for quoting';
  string escapedDoubleQuote = "Use \\" for quoting";
  string singleQuotes = "don't do that, don't";
  string escapedSingleQuotes = 'don\\'t do that, don\\'t';
  string doubleQuotes = 'The "quick" brown fox';
  string escapeDoubleQuotes = "The \\"quick\\" brown fox";
  bytes8 hex1 = hex'DeadBeef';
  bytes8 hex2 = hex"DeadBeef";
  string withUnicode1 = unicode'hello 🦄 world';
  string withUnicode2 = unicode"hello 🦄 world";
  string multiPartAndUnicode = unicode'hello 🦄' unicode' world 🦄';
}

=====================================output=====================================
import 'someContract.sol';
import 'someOtherContract.sol';

contract Foo {
    string foo1 = 'foo';
    string foo2 = 'foo';
    string spaces1 = 'the quick brown fox';
    string spaces2 = 'the quick brown fox';
    string singleQuote = "don't do that";
    string escapedSingleQuote = "don't do that";
    string doubleQuote = 'Use " for quoting';
    string escapedDoubleQuote = 'Use " for quoting';
    string singleQuotes = "don't do that, don't";
    string escapedSingleQuotes = "don't do that, don't";
    string doubleQuotes = 'The "quick" brown fox';
    string escapeDoubleQuotes = 'The "quick" brown fox';
    bytes8 hex1 = hex'DeadBeef';
    bytes8 hex2 = hex'DeadBeef';
    string withUnicode1 = unicode'hello 🦄 world';
    string withUnicode2 = unicode'hello 🦄 world';
    string multiPartAndUnicode =
        unicode'hello 🦄'
        unicode' world 🦄';
}

================================================================================
`;

exports[`Quotes.sol - {"singleQuote":true} locations 1`] = `
SourceUnit 0-831
  SourceUnitMembers 0-831
    ImportDirective 0-26
      PathImport 7-25
        StringLiteral 7-25
    ImportDirective 27-58
      PathImport 34-57
        StringLiteral 34-57
    ContractDefinition 60-830
      Identifier 69-72
      ContractSpecifiers 72-72
      ContractMembers 75-829
        StateVariableDefinition 77-97
          StringKeyword 77-83
          StateVariableAttributes 83-83
          Identifier 84-88
          StateVariableDefinitionValue 89-96
            StringLiterals 90-96
              StringLiteral 91-96
        StateVariableDefinition 100-120
          StringKeyword 100-106
          StateVariableAttributes 106-106
          Identifier 107-111
          StateVariableDefinitionValue 112-119
            StringLiterals 113-119
              StringLiteral 114-119
        StateVariableDefinition 123-162
          StringKeyword 123-129
          StateVariableAttributes 129-129
          Identifier 130-137
          StateVariableDefinitionValue 138-161
            StringLiterals 139-161
              StringLiteral 140-161
        StateVariableDefinition 165-204
          StringKeyword 165-171
          StateVariableAttributes 171-171
          Identifier 172-179
          StateVariableDefinitionValue 180-203
            StringLiterals 181-203
              StringLiteral 182-203
        StateVariableDefinition 207-244
          StringKeyword 207-213
          StateVariableAttributes 213-213
          Identifier 214-225
          StateVariableDefinitionValue 226-243
            StringLiterals 227-243
              StringLiteral 228-243
        StateVariableDefinition 247-292
          StringKeyword 247-253
          StateVariableAttributes 253-253
          Identifier 254-272
          StateVariableDefinitionValue 273-291
            StringLiterals 274-291
              StringLiteral 275-291
        StateVariableDefinition 295-336
          StringKeyword 295-301
          StateVariableAttributes 301-301
          Identifier 302-313
          StateVariableDefinitionValue 314-335
            StringLiterals 315-335
              StringLiteral 316-335
        StateVariableDefinition 339-388
          StringKeyword 339-345
          StateVariableAttributes 345-345
          Identifier 346-364
          StateVariableDefinitionValue 365-387
            StringLiterals 366-387
              StringLiteral 367-387
        StateVariableDefinition 391-436
          StringKeyword 391-397
          StateVariableAttributes 397-397
          Identifier 398-410
          StateVariableDefinitionValue 411-435
            StringLiterals 412-435
              StringLiteral 413-435
        StateVariableDefinition 439-493
          StringKeyword 439-445
          StateVariableAttributes 445-445
          Identifier 446-465
          StateVariableDefinitionValue 466-492
            StringLiterals 467-492
              StringLiteral 468-492
        StateVariableDefinition 496-542
          StringKeyword 496-502
          StateVariableAttributes 502-502
          Identifier 503-515
          StateVariableDefinitionValue 516-541
            StringLiterals 517-541
              StringLiteral 518-541
        StateVariableDefinition 545-599
          StringKeyword 545-551
          StateVariableAttributes 551-551
          Identifier 552-570
          StateVariableDefinitionValue 571-598
            StringLiterals 572-598
              StringLiteral 573-598
        StateVariableDefinition 602-630
          BytesKeyword 602-608
          StateVariableAttributes 608-608
          Identifier 609-613
          StateVariableDefinitionValue 614-629
            HexStringLiterals 615-629
              HexStringLiteral 616-629
        StateVariableDefinition 633-661
          BytesKeyword 633-639
          StateVariableAttributes 639-639
          Identifier 640-644
          StateVariableDefinitionValue 645-660
            HexStringLiterals 646-660
              HexStringLiteral 647-660
        StateVariableDefinition 664-710
          StringKeyword 664-670
          StateVariableAttributes 670-670
          Identifier 671-683
          StateVariableDefinitionValue 684-709
            UnicodeStringLiterals 685-709
              UnicodeStringLiteral 686-709
        StateVariableDefinition 713-759
          StringKeyword 713-719
          StateVariableAttributes 719-719
          Identifier 720-732
          StateVariableDefinitionValue 733-758
            UnicodeStringLiterals 734-758
              UnicodeStringLiteral 735-758
        StateVariableDefinition 762-828
          StringKeyword 762-768
          StateVariableAttributes 768-768
          Identifier 769-788
          StateVariableDefinitionValue 789-827
            UnicodeStringLiterals 790-827
              UnicodeStringLiteral 791-808
              UnicodeStringLiteral 809-827
`;
